--- a/fermi/demo/src/main/resources/static/agent.html
+++ b/fermi/demo/src/main/resources/static/agent.html
@@ -14,6 +14,22 @@
     .hint { color: #555; font-size: 14px; }
     video { width: 100%; max-height: 320px; background: #000; border-radius: 12px; }
     pre { background: #f6f6f6; padding: 10px; border-radius: 10px; overflow: auto; }
+    .modal { position: fixed; inset: 0; display: none; z-index: 9999; }
+    .modal.is-open { display: block; }
+    .modal__backdrop { position: absolute; inset: 0; background: rgba(0,0,0,0.45); }
+    .modal__panel {
+      position: relative;
+      max-width: 420px;
+      margin: 18vh auto 0;
+      background: #fff;
+      border-radius: 14px;
+      border: 1px solid #e5e5e5;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.18);
+      padding: 16px;
+    }
+    .modal__title { margin: 0 0 8px 0; font-size: 18px; }
+    .modal__message { margin: 0 0 14px 0; color: #333; line-height: 1.4; }
+    .modal__actions { display: flex; justify-content: flex-end; gap: 10px; }
   </style>
 </head>
 <body>
@@ -117,6 +133,25 @@
     ws.send(JSON.stringify(msg));
   }
 
+  function showEndModal(message) {
+    const modal = $("endModal");
+    const msgEl = $("endModalMessage");
+    if (!modal) return;
+    if (msgEl) msgEl.textContent = message || "통화가 종료되었습니다.";
+    modal.classList.add("is-open");
+    modal.setAttribute("aria-hidden", "false");
+
+    const ok = $("btnEndModalOk");
+    if (ok) ok.focus();
+  }
+
+  function hideEndModal() {
+    const modal = $("endModal");
+    if (!modal) return;
+    modal.classList.remove("is-open");
+    modal.setAttribute("aria-hidden", "true");
+  }
+
   async function endSession(reason) {
     if (!roomId) { alert("sessionId(roomId)가 없습니다. 먼저 세션을 생성하세요."); return; }
     uiLog("[CALL] end requested", reason || "");
@@ -134,6 +169,7 @@
     } catch (e) {}
 
     // 3) local cleanup
+    showEndModal("통화를 종료했습니다.");
     cleanup();
   }
 
@@ -333,6 +369,7 @@
         else pendingRemoteCandidates.push(msg.payload);
       } else if (msg.type === "ended") {
         uiLog("[CALL] ended by peer", msg.payload);
+        showEndModal("상대가 통화를 종료했습니다.");
         cleanup();
       }
     };
@@ -350,10 +387,38 @@
     wsSend("offer", pc.localDescription);
   };
 
+  // ===== Modal handlers =====
+  const okBtn = $("btnEndModalOk");
+  if (okBtn) okBtn.onclick = () => hideEndModal();
+
+  const endModal = $("endModal");
+  if (endModal) {
+    endModal.addEventListener("click", (e) => {
+      if (e.target === endModal || e.target.classList.contains("modal__backdrop")) {
+        hideEndModal();
+      }
+    });
+    window.addEventListener("keydown", (e) => {
+      if (e.key === "Escape") hideEndModal();
+    });
+  }
+
   window.addEventListener("beforeunload", () => {
     try { if (roomId) { navigator.sendBeacon(`${getApiBase()}/api/sessions/${encodeURIComponent(roomId)}/end`); } } catch (e) {}
     try { if (ws && ws.readyState === 1) { wsSend("ended", { reason: "agent_unload" }); } } catch (e) {}
   });
 </script>
+
+<!-- Call End Modal -->
+<div id="endModal" class="modal" aria-hidden="true">
+  <div class="modal__backdrop"></div>
+  <div class="modal__panel" role="dialog" aria-modal="true" aria-labelledby="endModalTitle">
+    <h2 id="endModalTitle" class="modal__title">통화 종료</h2>
+    <p id="endModalMessage" class="modal__message">통화가 종료되었습니다.</p>
+    <div class="modal__actions">
+      <button id="btnEndModalOk">확인</button>
+    </div>
+  </div>
+</div>
 </body>
 </html>
