--- a/fermi/demo/src/main/resources/static/join.html
+++ b/fermi/demo/src/main/resources/static/join.html
@@ -11,6 +11,22 @@
     video { width: 100%; max-height: 320px; background: #000; border-radius: 12px; }
     .hint { color: #555; font-size: 14px; }
     pre { background: #f6f6f6; padding: 10px; border-radius: 10px; overflow: auto; }
+    .modal { position: fixed; inset: 0; display: none; z-index: 9999; }
+    .modal.is-open { display: block; }
+    .modal__backdrop { position: absolute; inset: 0; background: rgba(0,0,0,0.45); }
+    .modal__panel {
+      position: relative;
+      max-width: 420px;
+      margin: 18vh auto 0;
+      background: #fff;
+      border-radius: 14px;
+      border: 1px solid #e5e5e5;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.18);
+      padding: 16px;
+    }
+    .modal__title { margin: 0 0 8px 0; font-size: 18px; }
+    .modal__message { margin: 0 0 14px 0; color: #333; line-height: 1.4; }
+    .modal__actions { display: flex; justify-content: flex-end; gap: 10px; }
   </style>
 </head>
 <body>
@@ -68,6 +84,26 @@
     ws.send(JSON.stringify(msg));
   }
 
+  function showEndModal(message) {
+    const modal = $("endModal");
+    const msgEl = $("endModalMessage");
+    if (!modal) return;
+    if (msgEl) msgEl.textContent = message || "통화가 종료되었습니다.";
+    modal.classList.add("is-open");
+    modal.setAttribute("aria-hidden", "false");
+
+    // focus the OK button for keyboard users
+    const ok = $("btnEndModalOk");
+    if (ok) ok.focus();
+  }
+
+  function hideEndModal() {
+    const modal = $("endModal");
+    if (!modal) return;
+    modal.classList.remove("is-open");
+    modal.setAttribute("aria-hidden", "true");
+  }
+
   async function endSession(reason) {
     uiLog("[CALL] end requested", reason || "");
     // 1) notify server (idempotent)
@@ -79,6 +115,7 @@
     try { wsSend("ended", { reason: reason || "user_end" }); } catch (e) {}
 
     // 3) local cleanup
+    showEndModal("통화를 종료했습니다.");
     cleanup();
   }
 
@@ -219,14 +256,44 @@
         else pendingRemoteCandidates.push(msg.payload);
       } else if (msg.type === "ended") {
         uiLog("[CALL] ended by peer", msg.payload);
+        showEndModal("상대가 통화를 종료했습니다.");
         cleanup();
       }
     };
 
     const endBtn = $("btnEndCall");
     if (endBtn) endBtn.onclick = () => endSession("customer_click");
+
+    const okBtn = $("btnEndModalOk");
+    if (okBtn) okBtn.onclick = () => hideEndModal();
+
+    const modal = $("endModal");
+    if (modal) {
+      // click outside closes
+      modal.addEventListener("click", (e) => {
+        if (e.target === modal || e.target.classList.contains("modal__backdrop")) {
+          hideEndModal();
+        }
+      });
+      // ESC closes
+      window.addEventListener("keydown", (e) => {
+        if (e.key === "Escape") hideEndModal();
+      });
+    }
   })();
 </script>
+
+<!-- Call End Modal -->
+<div id="endModal" class="modal" aria-hidden="true">
+  <div class="modal__backdrop"></div>
+  <div class="modal__panel" role="dialog" aria-modal="true" aria-labelledby="endModalTitle">
+    <h2 id="endModalTitle" class="modal__title">통화 종료</h2>
+    <p id="endModalMessage" class="modal__message">통화가 종료되었습니다.</p>
+    <div class="modal__actions">
+      <button id="btnEndModalOk">확인</button>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
