--- a/fermi/demo/src/main/resources/static/join.html
+++ b/fermi/demo/src/main/resources/static/join.html
@@ -127,7 +127,22 @@
         uiLog("[MEDIA] local stream ready");
 
         // PC
-        pc = new RTCPeerConnection({ iceServers: [] });
+        const iceConfiguration = {
+            iceServers: [
+                { urls: 'stun:stun.l.google.com:19302' }, // Public STUN server
+                // {
+                //     urls: "turn:61.74.145.110:3478?transport=udp",
+                //     username: "fermi_user",
+                //     credential: "411c0df2bd576db828c933c537e8841a"
+                // },
+                // {
+                //     urls: "turns:your-turn-server.com:443?transport=tcp",
+                //     username: "your_username",
+                //     credential: "your_password"
+                // }
+            ]
+        };
+        pc = new RTCPeerConnection(iceConfiguration);
         for (const track of localStream.getTracks()) pc.addTrack(track, localStream);
 
         pc.ontrack = (event) => {
